add email to list when creating user if checkbox is checked

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,3 +7,4 @@ en:
     failure: Unable to subscribe
     subscribe: Subscribe
     enter_email: Enter your email
+    subscribe_to_our_newsletter: Subscribe to our newsletter
